# csm-batch-processor

./: .gitignore  README.md  csm_processor_gui.jsx  pyproject.toml
.github/workflows/: ci.yml  deploy-pages.yml
csm_processor/: __init__.py  __main__.py  _version.py  anomaly_detection.py  anomaly_plotting.py  cli.py  correlation.py  csm_calculator.py  feature_extraction.py  io_utils.py  log_binning.py  plotting.py  style.py
csm_processor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
examples/: anomaly_demo.py
tests/: test_anomaly_detection.py  test_anomaly_thresholds.py  test_cli.py  test_csm_processor.py  test_import_side_effects.py  test_metadata.py  test_public_api.py
web-demo/: README.md  index.html  package-lock.json  package.json  vite.config.js
web-demo/src/: App.jsx  index.css
