[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csm-processor"
dynamic = ["version"]
description = "Cross-Spectral Matrix Batch Processor with anomaly detection"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
  {name = "Tingyi Zhang"},
]
dependencies = [
  "numpy>=1.21",
  "scipy>=1.7",
  "matplotlib>=3.5",
  "scikit-learn>=1.0",
]

[project.optional-dependencies]
tdms = ["npTDMS>=1.5"]
hdf5 = ["h5py>=3.0"]
all = ["npTDMS>=1.5", "h5py>=3.0"]

[project.scripts]
csm-processor = "csm_processor.cli:main"

[tool.setuptools.dynamic]
version = {attr = "csm_processor._version.__version__"}

[tool.setuptools.packages.find]
include = ["csm_processor*"]